data/derived/comb/progs/unify/prog0499.ml.out
Characters 145-149:
  let seen' =  let x = List.mem(h, seen) in if (x = true) then seen' = seen else seen' = List.rev(h:: List.rev(seen)) in
                                                    ^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
